[anunezescamilla] añadido cambios servicio usuarios